# fractals

./: .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: build.yml
code/: CMakeLists.txt
code/lines/: koch-snowflake.py  koch.py  sierpinski.py
code/python/lines/: koch-line.py
code/python/points/: sierpinski.py
code/src/: CMakeLists.txt
code/src/fractal-gen/cpp/: main.cpp
code/src/fractal-viewer/: CMakeLists.txt
code/src/fractalgen/: CMakeLists.txt
code/src/fractalgen/cpp/: main.cpp
code/src/fractalgen/cpp/fractalgen/: main.cpp
code/src/fractalgen/cpp/fractalgen/generators/: factory.cpp  generators.cpp
code/src/fractalgen/include/private/bitmap/: bitmap_image.hpp
code/src/fractalgen/include/private/fractalgen/: generators.hpp  options.hpp  rgb.hpp
code/src/fractalgen/include/private/fractalgen/generators/: factory.hpp  generators.hpp
code/src/fractalview/: CMakeLists.txt
code/src/fractalview/cpp/: main.cpp
code/src/generator/: CMakeLists.txt
code/src/generator/cpp/: main.cpp
code/src/generator/include/private/generator/: fractals.hpp
code/src/mandelview/: CMakeLists.txt
code/src/mandelview/assets/shaders/: mandelbrot_frag.glsl  mandelbrot_vert.glsl
code/src/mandelview/cpp/: main.cpp  renderer.cpp
code/src/mandelview/include/private/mandelview/: renderer.hpp
code/src/viewer/: CMakeLists.txt
code/v1/: CMakeLists.txt  fractal.h  main.cpp
code/v1/hsv/: fractal.h  main.cpp
code/v1/rgb/: CMakeLists.txt
code/v2/: CMakeLists.txt  idea.txt  main.cpp  mandelVert.glsl
code/v2/fancy_option/: fancy_main.cpp  mandelFrag.glsl  renderer.h
code/v2/rgb/: main.cpp
code/v2/rgb/fancy_option/: mandelVert.glsl  model.h
fractal-gen/code/: CMakeLists.txt
fractal-gen/code/src/: CMakeLists.txt
fractal-gen/code/src/fractal-gen/: CMakeLists.txt
fractal-gen/code/src/fractal-gen/cpp/: main.cpp
fractal-viewer/code/src/: CMakeLists.txt
img/: .gitignore
src/v1/hsv/: fractal.h  main.cpp
src/v1/rgb/: fractal.h  main.cpp
src/v2/hsv/: CMakeLists.txt  mandelFrag.glsl
src/v3/CudaFractals/: CudaFractals.sln
src/v3/CudaFractals/CudaFractals/: CudaFractals.cpp  CudaFractals.cu  CudaFractals.vcxproj  CudaFractals.vcxproj.filters
